WIP: ChatOrchestrationService changes